[build-system]
requires = ["setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-analysis-tools"
version = "0.1.0"
description = "Utilities for spectral analysis"
authors = [ { name = "kame" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
py-modules = ["spectral_analysis_tools"]
